fix contrast on call to action button

--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -1,4 +1,5 @@
 // Primary
+$red: #B3000C;
 $light-red: hsl(356, 100%, 66%);
 $very-light-red: hsl(355, 100%, 74%);
 $very-dark-blue: hsl(208, 49%, 24%);
@@ -14,7 +15,7 @@ $cta-gradient: linear-gradient(148deg, #FF8F71 0%, #FF3E55 100%);
 $background-grad: linear-gradient(149deg, hsl(237, 17%, 21%),hsl(237, 23%, 32%) );
 
 $header-text-color: $white;
-$cta-text-color: $light-red;
+$cta-text-color: $red;
 $cta-hover-color: $very-light-red;
 
 $heading-text-color: $very-dark-blue;
